# camelram-beta

./: .gitignore  LICENSE  Makefile  README.md  ast.ml  calc.ml  dune-project  exec  exec_camelrambeta  function.ml  functions.ml  general.ml  lexer.mll  main.ml  main.native  pain.ml  parser.mly  playground.ml  polynomial.ml  test.txt  tests.ml  variable.ml
_build/: .db  .digest-db  _digests  _log  ast.cmi  ast.cmo  ast.cmx  lexer.cmi  lexer.cmo  lexer.cmx  lexer.ml  log  main.cmi  main.cmo  main.cmx  main.native  parser.cmi  parser.cmx  parser.ml  parser.mli
_build/default/: camelries.dune-package  camelries.opam
_build/default/lib/: camelries.cmxs
_build/default/lib/.camelries.objs/byte/: camelries.cmt
_build/default/lib/.merlin-conf/: lib-camelries
_build/default/test/: camelries.ml
_build/default/test/.merlin-conf/: exe-camelries
test/: camelries.ml
